src/less/dashboard.less
@import "variables";
.dashboard {
  height: 100vh;
  min-height: 100%;
  background: white;
  box-shadow: 5px 15px 10px rgb(107, 105, 105);
  // background:rgba(241, 241, 241, 0.904);

  .fas {
    color: @accentcolor;
    margin-top: 3vh;
    font-size: 2.9rem;
  }
  .media {
    max-width: 100%;
    height: 2.7vw;
    margin-bottom: 3vh;
  }
  .navbar {
    display: flex;
    flex-direction: column;
    padding-right: 0px;
    padding-left: 0px;

    .nav-links {
      color: @secondarycolor;
      font-size: 1.3rem;

      width: 100%;
      padding: 3vh 0vh 3vh;
    }
    .nav-sml {
      color: @secondarycolor;
      font-size: 0.9rem;
      width: 100%;
      padding: 3vh 0vh 3vh;
    }
    .nav-links:hover {
      background: rgba(8, 8, 8, 0.267);
      color: lighten(@accentcolor, 25%);
    }
    .nav-sml:hover {
      background: rgba(8, 8, 8, 0.267);
      color: lighten(@accentcolor, 25%);
    }
    .btn {
      border: none;
      font-size: 1.3rem;
      margin-top: 3vh;
      width: 12vw;
      background: @secondarycolor;
    }
    .btn-sml {
      border: none;
      font-size: 0.8rem;
      margin-top: 3vh;
      width: 100%;
      background: @secondarycolor;
    }
    .btn:active {
      background: @accentcolor;
      border: none;
    }
    .btn:hover {
      background: @accentcolor;
    }
    .btn:visited {
      background: @accentcolor;
    }
    .dropdown-menu {
      max-height: 18vh;
      overflow: hidden;
      overflow-y: scroll;
    }
    .dropdown {
      width: 100%;
    }
    .show {
      width: 100%;
    }
    .dropdown-item {
      text-align: center;
    }
  }
}
.tags-container {
  padding-right: 0px;
  padding-left: 0px;
  margin-top: 3vh;

  .cover {
    width: 100%;
    color: rgba(15, 15, 15, 0);
    cursor: pointer;
  }
  .cover:hover {
    background: rgba(15, 15, 15, 0.342);
    color: white;
  }

  p {
    padding-top: 22vh;
    font-size: 3rem;
    margin-top: 0px;
    height: 45.8vh;
  }

  .tags {
    -webkit-background-size: contain;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-position: center bottom;
    background-repeat: no-repeat;
    height: 45.8vh;
    margin-top: 5vh;
  }

  .row {
    overflow: hidden;
    overflow-y: scroll;
    max-height: 95vh;
    margin-right: 0px;
    margin: 0 auto;
  }

  .tag-img {
    margin: 0px;
    padding: 0px;
  }
  .tag {
    height: 49.8vh;
  }
}

